# dezoomcamp-capstone

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
pipelines/: kafka_producer.py  orchestrator.py  youtube.py  youtube_api.py  yt_trending.py
